[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/logo.gd" type="Script" id=1]
[ext_resource path="res://Art/Utility/black_pixle.png" type="Texture" id=2]
[ext_resource path="res://Art/Utility/white_pixle.png" type="Texture" id=3]
[ext_resource path="res://Art/Concept Art/pf.png" type="Texture" id=4]
[ext_resource path="res://Art/shaders/logo_pixel_shift.tres" type="Material" id=5]
[ext_resource path="res://Art/Utility/red_pixle.png" type="Texture" id=6]
[ext_resource path="res://fonts/CFSpaceship-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fonts/Copperplate Gothic Bold Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec3 color = vec3(1);

void fragment() {
	COLOR = vec4(color, 1);
}

"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color = Vector3( 1, 1, 1 )

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.5

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.1689, 23.5533 )

[sub_resource type="DynamicFont" id=5]
size = 99
use_mipmaps = true
use_filter = true
extra_spacing_char = 14
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 127
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 8 )

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 100000, 128 )

[node name="logo" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="cover" type="TextureRect" parent="background"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="guide" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.447059 )
position = Vector2( 540, 540 )
scale = Vector2( 1.48814, 1.48814 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="pixelstage" type="Node2D" parent="."]
position = Vector2( 859.168, 273.372 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="pixel" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -101.688, -99.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel2" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -33.6875, -99.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel2"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel2"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel3" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 34.3124, -99.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel3"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel3"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel4" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 102.312, -99.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel4"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel4"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel5" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -101.688, -33.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel5"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel5"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel6" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -33.6875, -33.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel6"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel6"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel7" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 34.3124, -33.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel7"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel7"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel8" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 101.312, -33.9779 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel8"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel8"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel9" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 101.312, 34.0221 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel9"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel9"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel10" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 34.3124, 34.0221 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel10"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel10"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel11" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -33.6875, 34.0221 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel11"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel11"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel12" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -101.688, 34.0221 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel12"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel12"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel13" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -101.688, 101.022 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel13"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel13"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel14" type="RigidBody2D" parent="pixelstage"]
position = Vector2( -33.6875, 101.022 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel14"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel14"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel15" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 34.3124, 101.022 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel15"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel15"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel16" type="RigidBody2D" parent="pixelstage"]
position = Vector2( 101.312, 101.022 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
linear_damp = 0.1
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pixelstage/pixel16"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pixelstage/pixel16"]
material = ExtResource( 5 )
scale = Vector2( 48, 48 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="lettering" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 855.999, 271 )
__meta__ = {
"_edit_group_": true
}

[node name="pixel" type="Sprite" parent="lettering"]
position = Vector2( 3.81393, 241.427 )
rotation = 0.785398
scale = Vector2( 16, 16 )
texture = ExtResource( 6 )

[node name="PIXELFLUX" type="Label" parent="lettering"]
margin_left = -264.655
margin_top = 191.181
margin_right = 278.345
margin_bottom = 291.181
custom_fonts/font = SubResource( 5 )
text = "PIXELFLUX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CONTROL" type="Label" parent="lettering"]
margin_left = -363.0
margin_top = 274.0
margin_right = 370.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 6 )
text = "CONTROL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collision" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="bottom" type="CollisionShape2D" parent="collision"]
position = Vector2( 945.805, 1211.62 )
shape = SubResource( 8 )

[node name="left" type="CollisionShape2D" parent="collision"]
position = Vector2( -128, 0 )
rotation = -1.5708
shape = SubResource( 8 )

[node name="right" type="CollisionShape2D" parent="collision"]
position = Vector2( 2044, -15.454 )
rotation = -1.5708
shape = SubResource( 8 )

[node name="teleport" type="Node2D" parent="."]
position = Vector2( 563.502, -24.6857 )

[node name="returnPixels" type="Timer" parent="."]
wait_time = 5.5
one_shot = true
autostart = true

[node name="fadeBlack" type="Timer" parent="."]
wait_time = 7.5
one_shot = true
autostart = true

[node name="exitScene" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
[connection signal="timeout" from="returnPixels" to="." method="_on_returnPixels_timeout"]
[connection signal="timeout" from="fadeBlack" to="." method="_on_fadeBlack_timeout"]
[connection signal="timeout" from="exitScene" to="." method="_on_exitScene_timeout"]
